[tool.poetry]
name = "edbogenerator"
version = "0.1.2"
description = "A host of useful tools to augment the EDBO+ optimization workflow."
authors = ["helloimfrei <christianjtapp@gmail.com>"]
license = "Apache 2.0"
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy  = ">=1.20,<2"
pandas = ">=1.3,<2"
plotly = ">=5,<6"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"